[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyatlan"
dynamic = ["version"]
description = "Atlan Python Client"
readme = "README.md"
license = {text = "Apache LICENSE 2.0"}
authors = [
    {name = "Atlan Technologies Pvt Ltd", email = "engineering@atlan.com"}
]
maintainers = [
    {name = "Atlan Technologies Pvt Ltd", email = "engineering@atlan.com"}
]
keywords = ["atlan", "client"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]
requires-python = ">=3.9"
dependencies = [
    "pydantic~=2.11.7",
    "jinja2~=3.1.6",
    "tenacity~=9.1.2",
    "lazy_loader~=0.4",
    "nanoid~=2.0.0",
    "pytz~=2025.2",
    "python-dateutil~=2.9.0.post0",
    "PyYAML~=6.0.2",
    "httpx~=0.28.1",
    "httpx-retries~=0.4.0",
    "pytest-asyncio~=1.1.0",
]

[project.urls]
Homepage = "https://github.com/atlanhq/atlan-python"
Repository = "https://github.com/atlanhq/atlan-python"
Documentation = "https://github.com/atlanhq/atlan-python"
Issues = "https://github.com/atlanhq/atlan-python/issues"

[dependency-groups]
dev = [
    "mypy~=1.9.0",
    "ruff~=0.12.8",
    "types-requests~=2.31.0.6",
    "types-setuptools~=75.8.0.20250110",
    "pytest~=8.3.4",
    "pytest-vcr~=1.0.2",
    "vcrpy~=6.0.2",
    "pytest-order~=1.3.0",
    "pytest-timer[termcolor]~=1.0.0",
    "pytest-sugar~=1.0.0",
    "retry~=0.9.2",
    "pre-commit~=3.5.0",
    "deepdiff~=7.0.1",
    "pytest-cov~=5.0.0",
    "twine~=6.1.0",
    "types-retry~=0.9.9.20241221",
    "networkx~=3.1.0",
    "networkx-stubs~=0.0.1",
]

docs = [
    "sphinx~=7.2.6",
    "furo~=2024.8.6",
    "requests~=2.32.4",
    "pydantic~=2.11.7",
    "jinja2~=3.1.6",
    "networkx~=3.1.0",
    "tenacity~=9.1.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyatlan*"]

[tool.setuptools.package-data]
pyatlan = ["py.typed", "logging.conf"]
"*" = ["*.jinja2"]

[tool.setuptools.dynamic]
version = {file = "pyatlan/version.txt"}

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.ruff]
fix = true
line-length = 88
exclude = ["env", "venv", "__pycache__"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"pyatlan/model/assets.py" = ["S307"]
"pyatlan/model/assets/**.py" = ["E402", "F811"]
"pyatlan/model/assets/core/**.py" = ["E402", "F811"]

[tool.pytest.ini_options]
addopts = "-p no:name_of_plugin"
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "module"
asyncio_default_fixture_loop_scope = "module"
filterwarnings = [
    "ignore::DeprecationWarning",
]
