[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyatlan"
dynamic = ["version"]
description = "Atlan Python Client"
readme = "README.md"
license = {text = "Apache LICENSE 2.0"}
authors = [
    {name = "Atlan Technologies Pvt Ltd", email = "engineering@atlan.com"}
]
maintainers = [
    {name = "Atlan Technologies Pvt Ltd", email = "engineering@atlan.com"}
]
keywords = ["atlan", "client"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]
requires-python = ">=3.9"
dependencies = [
    "pydantic~=2.12.4",
    "jinja2~=3.1.6",
    "tenacity~=9.1.2",
    "lazy-loader~=0.4",
    "nanoid~=2.0.0",
    "pytz~=2025.2",
    "python-dateutil~=2.9.0.post0",
    "PyYAML~=6.0.3",
    "httpx~=0.28.1",
    "httpx-retries~=0.4.5",
    "authlib~=1.6.5",
]

[project.urls]
Homepage = "https://github.com/atlanhq/atlan-python"
Repository = "https://github.com/atlanhq/atlan-python"
Documentation = "https://github.com/atlanhq/atlan-python"
Issues = "https://github.com/atlanhq/atlan-python/issues"

[dependency-groups]
dev = [
    "mypy~=1.18.0",
    "ruff~=0.14.5",
    "types-setuptools~=80.9.0.20250822",
    "types-Authlib~=1.6.5.20251005",
    "pytest~=8.4.2",
    "pytest-vcr~=1.0.2",
    "vcrpy~=7.0.0",
    "pytest-order~=1.3.0",
    "pytest-timer[termcolor]~=1.0.0",
    "pytest-sugar~=1.0.0",
    "pre-commit~=4.3.0",
    "deepdiff~=8.6.1",
    "pytest-cov~=7.0.0",
    "twine~=6.2.0",
    "types-retry~=0.9.9.20250322",
    "networkx~=3.2.1",
    "networkx-stubs~=0.0.1",
    "pytest-asyncio~=1.2.0",
]

docs = [
    "sphinx~=7.4.7",
    "furo~=2025.9.25",
    "requests~=2.32.5",
    "pydantic~=2.12.3",
    "jinja2~=3.1.6",
    "networkx~=3.2.1",
    "tenacity~=9.1.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyatlan*"]

[tool.setuptools.package-data]
pyatlan = ["py.typed", "logging.conf"]
"*" = ["*.jinja2"]

[tool.setuptools.dynamic]
version = {file = "pyatlan/version.txt"}

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.ruff]
fix = true
line-length = 88
exclude = ["env", "venv", "__pycache__"]

[tool.ruff.lint.isort]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"pyatlan/model/assets.py" = ["S307"]
"pyatlan/model/assets/**.py" = ["E402", "F811"]
"pyatlan/model/assets/core/**.py" = ["E402", "F811"]

[tool.pytest.ini_options]
addopts = "-p no:name_of_plugin"
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "module"
asyncio_default_fixture_loop_scope = "module"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.poe.tasks]
snyk-requirements = "uv export --all-extras --no-hashes > snyk-requirements.txt"
